# glov

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
docker/: Caddyfile  Dockerfile  docker-compose.yml
glov/: app.py  pdf_utils.py
tests/: test_pdf_service.py  test_text_splitter.py
